--- a/app/src/main/res/layout/activity_subsub.xml
+++ b/app/src/main/res/layout/activity_subsub.xml
@@ -1,16 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
+    <androidx.viewpager.widget.ViewPager
+        android:id="@+id/pager"
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent"
+        android:orientation="vertical">
+        <!--タイトル表示-->
+        <androidx.viewpager.widget.PagerTabStrip
+            android:id="@+id/pager_tab_strip"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="top"
+            android:background="#fff"
+            android:textColor="#FF5F5F"
+            android:paddingTop="10dp"
+            android:paddingBottom="10dp"/>
+    </androidx.viewpager.widget.ViewPager>
 
-    <TextView
-        android:id="@+id/textView2"
-        android:layout_width="161dp"
-        android:layout_height="75dp"
-        android:text=""
-        tools:layout_editor_absoluteX="125dp"
-        tools:layout_editor_absoluteY="304dp" />
 </androidx.constraintlayout.widget.ConstraintLayout>
