--- a/app/src/main/res/layout/activity_subsub.xml
+++ b/app/src/main/res/layout/activity_subsub.xml
@@ -8,9 +8,10 @@
 
     <androidx.viewpager.widget.ViewPager
         android:id="@+id/pager"
-        android:layout_width="wrap_content"
-        android:layout_height="match_parent"
-        android:orientation="vertical">
+        android:layout_width="414dp"
+        android:layout_height="464dp"
+        android:orientation="vertical"
+        tools:layout_editor_absoluteY="0dp">
         <!--タイトル表示-->
         <androidx.viewpager.widget.PagerTabStrip
             android:id="@+id/pager_tab_strip"
@@ -18,9 +19,17 @@
             android:layout_height="wrap_content"
             android:layout_gravity="top"
             android:background="#fff"
-            android:textColor="#FF5F5F"
             android:paddingTop="10dp"
-            android:paddingBottom="10dp"/>
+            android:paddingBottom="10dp"
+            android:textColor="#FF5F5F" />
     </androidx.viewpager.widget.ViewPager>
+
+    <Button
+        android:id="@+id/add_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Button"
+        tools:layout_editor_absoluteX="159dp"
+        tools:layout_editor_absoluteY="505dp" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
